...
                    setState(() {
                      showSBids = value!;
                    });
                  },
                ),
                CheckboxListTile(
                  title: const Text('Non-favourited Bids'),
                  value: showBids,
                  activeColor: Theme.of(context).primaryColor,
                  onChanged: (bool? value) {
                    setState(() {
                      showBids = value!;
                    });
...

          //*****************BUTTONS*******************/

          StoreConnector<AppState, _ViewModel>(
            vm: () => _Factory(widget),
            builder: (BuildContext context, _ViewModel vm) => ButtonWidget(
              text: "Apply",
              function: () {
                //if the min and max values are actually used
                vm.dispatchFilterBidsAction(
                  FilterBidsModel(
                    includeShortlisted: showSBids,
                    includeBids: showBids,
...
