...
            ),
            const Align(
              alignment: Alignment.center,
              child: Padding(
                padding: EdgeInsets.only(bottom: 15),
                child: Text(
                  "Place Bid",
                  style: TextStyle(
                    color: Colors.black,
                    fontSize: 30,
                    fontWeight: FontWeight.bold,
                  ),
                ),
...
              ),
            ),
            StoreConnector<AppState, _ViewModel>(
              vm: () => _Factory(this),
              builder: (BuildContext context, _ViewModel vm) =>
                  LongButtonWidget(
                text: "Submit Bid",
                function: () {
                  if (bidPriceController.value.text.isNotEmpty) {
                    final int price =
                        int.parse(bidPriceController.value.text) * 100;
                    displayToastSuccess(
                            context, "Bid Placed!");
...
