...
                        child: TabBar(
                          indicatorColor: Theme.of(context).primaryColor,
                          tabs: const [
                            Padding(
                              padding: EdgeInsets.all(15.0),
                              child: Text(
                                "OPEN JOBS",
                                style: TextStyle(
                                  color: Colors.white,
                                  fontSize: 17,
                                  fontWeight: FontWeight.bold,
                                ),
                              ),
                            ),
                            Padding(
                              padding: EdgeInsets.all(8.0),
                              child: Text(
                                "MY BIDS",
                                style: TextStyle(
                                  color: Colors.white,
                                  fontSize: 17,
                                  fontWeight: FontWeight.bold,
                                ),
                              ),
...
