...
            ),
          ),
          //********************************************************** *

          //**************PROCEED BUTTON ************** */
          ButtonWidget(
            text: "Proceed",
            color: "light",
            border: "lightBlue",
            function: () async {
              final int? price = await showModalBottomSheet<int?>(
                context: context,
                isScrollControlled: true,
...
